src/objects/SMS_Integration_Gateway__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SMS integration gateway</description>
    <fields>
        <fullName>SMS_Country_Code__c</fullName>
        <label>SMS Country Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Gateway_ID__c</fullName>
        <label>SMS Gateway ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Gateway_URL__c</fullName>
        <label>SMS Gateway URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Password__c</fullName>
        <label>SMS Password</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Type__c</fullName>
        <label>SMS Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SMS Integration Gateway</label>
</CustomObject>